# FI-Ran_GHG_2022

./: .gitignore  GHG_ST_wind_dir.ipynb  GHG_best_model_performance.ipynb  GHG_env_correlation.ipynb  GHG_map_parameter_contribution.ipynb  GHG_model_comparison.ipynb  GHG_site_level_annual_flux.ipynb  GHG_st_T_response.ipynb  README.md  create_T_air_snow_free_period.ipynb  create_annual_and_temperature_predictions.ipynb  create_biomet_ec_fpr_dataset_all_time_points.ipynb  create_biomet_ec_fpr_wtd_dataset.ipynb  create_footprint_soilclass_data.ipynb  create_inference_data.ipynb  pyproject.toml  utils.py
