[tool.poetry]
name = "ranskalankorpi-ec"
version = "0.1.0"
description = "Data analysis on Ränskälänkorpi EC data"
authors = ["Altesmi <optikkasalo@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.11.1"
numpy = "^1.24.2"
scipy = "^1.10.0"
pandas = "2.1"
xarray = "^2023.2.0"
matplotlib = "^3.6.3"
jupyter = "^1.0.0"
ipympl = "^0.9.2"
scikit-learn = "^1.2.1"
statsmodels = "^0.13.5"
netcdf4 = "^1.6.2"
python-dotenv = "^1.0.0"
pytz = "^2022.7.1"
geopandas = "^0.12.2"
seaborn = "0.13.0"
rasterio = "^1.3.6"
ipywidgets = "^8.0.6"
openpyxl = "^3.1.2"
pymc = "^5.9.0"
graphviz = "^0.20.1"
py-markdown-table = "^0.4.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
